--- a/assets/translation/en-US.json
+++ b/assets/translation/en-US.json
@@ -6,5 +6,7 @@
   "salads": "Salads",
   "drinks": "Drinks",
   "fast_food": "Fast Food",
-  "title": "We are very glad that you chose \n Our restaurant, thank you for your visit!"
+  "title": "We are very glad that you chose \n Our restaurant, thank you for your visit!",
+  "cost": "Cost:",
+  "more": "More"
 }
