--- a/assets/translation/ru-RU.json
+++ b/assets/translation/ru-RU.json
@@ -6,6 +6,8 @@
   "salads": "Салаты",
   "drinks": "Напитки",
   "fast_food": "Fast Food",
-  "title": "Мы очень рады что  вы выбрали\nНаше ресторан, спасибо за визит!"
+  "title": "Мы очень рады что  вы выбрали\nНаше ресторан, спасибо за визит!",
+  "cost": "Стоимость:",
+  "more": "Подробнее"
 }
 
