--- a/assets/translation/uz-UZ.json
+++ b/assets/translation/uz-UZ.json
@@ -6,6 +6,8 @@
   "salads": "Salatlar",
   "drinks": "Ichimliklar",
   "fast_food": "Fast Food",
-  "title": "Bizni restoranni tanlaganingizdan \nJuda xursandmiz, tashrifingiz uchun rahmat!"
+  "title": "Bizni restoranni tanlaganingizdan \nJuda xursandmiz, tashrifingiz uchun rahmat!",
+  "cost": "Narxi:",
+  "more": "Batafsil"
 }
 
